--- a/src/App.scss
+++ b/src/App.scss
@@ -2,14 +2,15 @@
   --body-bg: #f0f0f0;
   --btn-success: #41a141;
   --btn-failure: #ff0000;
-  --btn-default: #2929b1;
+  --btn-default: #0000a8;
   --text-color: #585858;
 }
 
 body {
   background-color: var(--body-bg);
   color: var(--text-color);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 0;
   margin: 0;
   * {
@@ -21,95 +22,54 @@ body {
   }
   a {
     text-decoration: none;
-      color: #000000;
+    color: black;
+  }
+  label {
+    font-weight: 500;
+    margin-right: 1rem;
+    line-height: 30px;
+    text-align: end;
+  }
+  input[type="text"],
+  input[type="password"],
+  input[type="email"] {
+    height: 30px;
+    padding: 5px;
+  }
+  textarea {
+    resize: none;
+    height: 200px;
+    padding: 3px;
   }
 }
+
+.form-item {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 2fr;
+  margin-bottom: 10px;
+}
+
 .btn {
-  color: #f0f0f0;
+  color: var(--body-bg);
   padding: 5px 10px;
   border: none;
   cursor: pointer;
 }
+
 .btn-success {
   background-color: var(--btn-success);
 }
+
 .btn-failure {
   background-color: var(--btn-failure);
 }
+
 .btn-default {
   background-color: var(--btn-default);
 }
-.wrapper {
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem;
-    h1 {
-      margin: 0;
-      color: #2929b1;
-    }
-  }
-  .snippet-manager {
-    display: flex;
-    .actions {
-      text-align: end;
-    }
-  }
-  .editor {
-    width: 50%;
-    flex-direction: column;
-    padding: 0 2rem;
-    .item {
-      margin-bottom: 10px;
-      display: flex;
-    }
-    label {
-      font-weight: 500;
-      margin-right: 1rem;
-      vertical-align: top;
-      line-height: 30px;
-      min-width: 100px;
-    }
-    input[type="text"] {
-      width: 100%;
-      height: 30px;
-      padding: 3px;
-    }
-    textarea {
-      resize: none;
-      height: 200px;
-      width: 100%;
-      padding: 3px;
-    }
-  }
-  .snippet-list {
-    height: 80vh;
-    overflow: auto;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    padding: 0 2rem;
-    .snippet {
-      padding: 10px;
-      background-color: white;
-      margin: 0 0 10px 0;
-      .title,
-      .code,
-      .desc {
-        margin: 0 0 0.5rem 0;
-        padding: 0;
-      }
-      .desc {
-        font-size: 1rem;
-        margin-bottom: 2rem;
-      }
-      .actions {
-        margin-top: 1rem;
-      }
-    }
-    .btn {
-      margin-right: 0.5rem;
-    }
-  }
+
+.actions {
+  text-align: end;
+  margin-top: 1rem;
 }
