user provider context api

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
   --body-bg: #f0f0f0;
   --btn-success: #41a141;
   --btn-failure: #ff0000;
-  --btn-default: #0000a8;
+  --btn-default: #005cdf;
   --text-color: #585858;
 }
 
